--- a/appspec.yml
+++ b/appspec.yml
@@ -7,6 +7,8 @@ files:
     destination: /tmp/codedeploy-deployment-staging-area/
 hooks:
   ApplicationStop:
+  - location: scripts/stop_application
+    timeout: 300
   BeforeInstall:
     - location: scripts/install_dependencies
       timeout: 300
